Fix background image painting of very small images

The background image fast path painting rounds the image src rect
to integer sizes assuming sprite maps and/or reasonably large images.
When a very small image is used scaled up to a large size (such as
constant color images scaled up to form progress bars by animating
background size) the src rect may be 1 x [small number] which gets
rounded to zero size.

This patch changes the code to detect this situation and not round
in such cases.

It's worth recording that an alternate approach is to detect when
the rounding results in a significant change in src rect and always
switch to unrounded in that case. But it would be more expensive for
a relatively uncommon case.

R=fmalita
BUG=904042

Change-Id: I24657a5d087c0dda0fd8a5e3c3d08e1e4eb02473
Reviewed-on: https://chromium-review.googlesource.com/c/1334291
Reviewed-by: Florin Malita <fmalita@chromium.org>
Commit-Queue: Stephen Chenney <schenney@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607901}
Former-commit-id: 0eaa27d31b4d727a10363cc2ef000b84438d9696